--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,52 @@
   box-sizing: border-box;
 }
 
+:root {
+  --primary: lightgrey;
+  --black: #333;
+  --header: grey;
+}
+
+a {
+  text-decoration: none;
+  border-bottom: 1px solid;
+}
+
+nav {
+  margin: 5px;
+}
+
 body {
-  background-color: lightblue;
   font-family: 'Lato', sans-serif;
   font-size: 112.5%;
   line-height: 1.4;
+  color: var(--black);
+  background-color: var(--primary);
 }
 
 input,
 button,
 textarea {
   font-size: inherit;
+}
+
+.page-header {
+  background: var(--header);
+}
+
+.button {
+  background: #000;
+  color: white;
+  border-bottom: none;
+  padding: 4px;
+  border-radius: 5px;
+}
+
+.image-fluid {
+  width: 100%;
+  height: auto;
+}
+.octocat {
+  width: 100px;
+  height: 120px;
 }
