--- a/styles.css
+++ b/styles.css
@@ -37,25 +37,12 @@ textarea {
 section {
   border-bottom: var(--black) solid;
   display: grid;
-  gap: 10px;
-  place-items: center;
+  justify-items: center;
 }
 
 p {
-  margin: 10px;
+  margin: 10px 10px;
   text-align: justify;
-}
-
-h2 {
-  text-align: center;
-}
-
-ul {
-  list-style-type: none;
-  margin: o;
-}
-li {
-  margin: 0;
 }
 
 #flexbox {
@@ -68,14 +55,9 @@ li {
   flex: auto;
 }
 
-.skills {
-  place-items: center;
-}
-
 .social {
-  display: flex;
   text-decoration: none;
-  margin: 20px;
+  margin: 10px;
   align-content: space-between;
 }
 
@@ -90,17 +72,20 @@ li {
   background: rgb(107, 106, 106);
   border-bottom: none;
   color: darkgrey;
-  padding: 4px;
+  padding: 8px;
+  border-radius: 5px;
 }
 
 .button-light {
   background: rgb(175, 175, 175);
   border-bottom: none;
   color: var(--black);
-  padding: 4px;
+  padding: 8px;
+  border-radius: 5px;
 }
 
 .image-fluid {
   height: auto;
   width: 100%;
+  margin: 10px 0;
 }
