--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
   color: var(--black);
   font-family: 'Lato', sans-serif;
   font-size: 112.5%;
-  line-height: 1.4;
+  line-height: 1.5;
 }
 
 input,
@@ -43,6 +43,14 @@ section {
 p {
   margin: 10px 10px;
   text-align: justify;
+  line-height: 1.8;
+}
+
+.page-header {
+  background: var(--header);
+  display: grid;
+  grid-gap: 40px;
+  place-items: center;
 }
 
 #flexbox-interests {
