--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ img {
 section {
   border-bottom: solid;
   display: grid;
-  justify-items: center;
+  place-items: center;
   padding: 15px;
 }
 
@@ -127,6 +127,8 @@ p {
   height: auto;
   column-gap: 20px;
   flex-direction: row;
+  place-content: center;
+  margin: 15px;
 }
 
 #flexbox-cv > div {
