--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
-@import './_variables.css';
+@import './styles/_variables.css';
 
-@import './_base.css';
+@import './styles/_base.css';
 
-@import './_utility.css';
+@import './styles/_utility.css';
 
-@import '/components/header.css';
+@import '/styles/components/header.css';
 
-@import '/components/buttons.css';
+@import '/styles/components/buttons.css';
 
 .interests {
   background: var(--interests);
