--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,6 +1,6 @@
-.page-header {
+.header__style {
   display: grid;
   grid-gap: 40px;
   place-items: center;
-  background: --secondary;
+  background: var(--secondary);
 }
